Adjust a Live Text quirk so that it applies to YouTube image thumbnails https://bugs.webkit.org/show_bug.cgi?id=233670

Reviewed by Devin Rousso.

Augment this existing quirk so that it (1) applies to YouTube as well, and (2) also forces `-webkit-user-drag`
to be `auto`.

* dom/ImageOverlay.cpp:
(WebCore::ImageOverlay::updateSubtree):
* page/Quirks.cpp:
(WebCore::Quirks::needsToForceUserSelectAndUserDragWhenInstallingImageOverlay const):
(WebCore::Quirks::needsToForceUserSelectWhenInstallingImageOverlay const): Deleted.
* page/Quirks.h:



Canonical link: https://commits.webkit.org/244725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286366 268f45cc-cd09-0410-ab3c-d52691b4dbfc